tests/negative/type_mismatch.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that primitive type mismatches in assignment are caught by the compiler.

let x: int32 = 10;
x = "Hello"; // Error: Cannot assign String to Int32
